--- a/frontend/src/components/css/user/Signup.css
+++ b/frontend/src/components/css/user/Signup.css
@@ -34,6 +34,7 @@
   }
   .input-box {
     position: relative;
+    z-index: 0;
     width: 100%;
     padding: 1em 1.25em 0 1.25em;
     background: #333;
