S05P13C101-44 / CRD 로직 구현&UserEditForm수정

--- a/frontend/src/components/css/menu.css
+++ b/frontend/src/components/css/menu.css
@@ -128,7 +128,7 @@ nav {
 .modal {
   display: flex;
   justify-content: flex-end;
-  align-items:end;
+  /* align-items:end; */
   position: fixed;
   left: 0;
   right:0;
