--- a/frontend/src/components/css/menu.css
+++ b/frontend/src/components/css/menu.css
@@ -22,13 +22,15 @@ ul {
   align-items: center;
 }
 nav {
-  background-color: #1E1E23;
+  background-color: #ffa061;
   width: 100vw;
   height: 8vh;
   /* position: fixed; */
+  top: 0;
   display: flex;
   align-items: center;
   padding: 2.5vh 2.5vw;
+  z-index: 1;
 }
 .menu-item {
   display: flex;
@@ -81,18 +83,19 @@ nav {
   transform-origin: 0% 100%;
 }
 
+
 #menuToggle input:checked ~ span
 {
   opacity: 1;
   transform: rotate(45deg) translate(-3px, -1px);
   background: #36383F;
 }
+
 #menuToggle input:checked ~ span:nth-last-child(3)
 {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
-
 #menuToggle input:checked ~ span:nth-last-child(2)
 {
   transform: rotate(-45deg) translate(0, -1px);
@@ -101,13 +104,13 @@ nav {
 #menu
 {
   position: absolute;
-  width: 70vw;
+  width: 15vw;
   height: 104vh;
   box-shadow: 0 0 10px #85888C;
   margin: -3rem 0 0 -3rem;
   padding: 3rem;
   padding-top: 5rem;
-  background-color: #F5F6FA;
+  background-color: white;
   -webkit-font-smoothing: antialiased;
   transform-origin: 0% 0%;
   transform: translate(-100%, 0);
