--- a/frontend/src/components/css/user/confirm.css
+++ b/frontend/src/components/css/user/confirm.css
@@ -1,11 +1,13 @@
 /* 첫번째 div */
 .sub-title {
-  font-weight: bold;
+  font-weight: 900;
 }
 .box {
-  padding: 0 5%;
+  margin-top: 15%;
+  padding: 5% 5%;
 }
 .box p {
+  font-size: 1.5rem;
   margin-bottom: 1.5rem;
 }
 .container {
@@ -30,10 +32,10 @@
   width: 100%;
   height: 34px;
   outline: none;
-  background: #333;
+  background: white;
   border: 0;
   padding: 0;
-  color: #fff;
+  color: black;
   font-size: 1.1rem;
 }
 
@@ -42,28 +44,34 @@
   z-index: 0;
   width: 100%;
   padding: 1em 1.25em 0 1.25em;
-  background: #333;
+  background: white;
+  border-width: 0.1rem;
+  border-color: black;
+  border-style: solid;
   border-radius: 4px;
 }
 
 /* label style */
 label {
+  width: 4em;
   display: flex;
   align-items: center;
   position: absolute;
   top: 1.3em;
-  padding-left: 0.5em;
+  /* padding-left: 0.5em; */
   font-size: 14px;
   color: #8c8c8c;
+  background-color: white;
   font-weight: bold;
   transition: 0.1s;
+  justify-content: center;
 }
 /* label transform */
 .input-box input:not(:placeholder-shown) + label,
 .input-box input:focus + label
 {
-  transform: translateY(-1em);
-  font-size: 10px;
+  transform: translateY(-2.1em);
+  font-size: 12px;
 }
 
 
@@ -92,11 +100,11 @@ button {
 }
 /* 비활성화 */
 button:disabled {
-  background: gray;
+  background: #8c92a3;
 }
 /* 활성화 */
 button:enabled {
-  background: #e50914;
+  background: #ffa061;
 }
 
 .smooth {
