--- a/frontend/src/components/css/user/ProfileInfo.css
+++ b/frontend/src/components/css/user/ProfileInfo.css
@@ -1,3 +1,11 @@
-.imgbox img{
-    margin: auto;
+.imgbox{
+    justify-content: center;
 }
+button {
+    margin: 20px 0;
+    padding: 0.8em;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 4px;
+    background: #ffa061;
+  }
