--- a/frontend/src/components/css/feed/feedList.css
+++ b/frontend/src/components/css/feed/feedList.css
@@ -3,8 +3,16 @@
   display: flex;
   flex-wrap: wrap;
 }
+.div-create-button {
+  padding-top: 5%;
+  display: flex;
+  justify-content: center;
 
-
-.box-button {
-  padding: 0 5%;
+}
+/* .create-button {
+  background-color: #ffa061;
+} */
+.menu-button {
+  width: 50%;
+  background-color: #8c92a3
 }
