--- a/frontend/src/components/css/main/manager.css
+++ b/frontend/src/components/css/main/manager.css
@@ -60,7 +60,7 @@
   z-index: 1;
   left: 0;
   right:0;
-  top: 0;
+  top: -5%;
   bottom: 0;
   background: rgba(0,0,0,0.3);
 }
@@ -69,7 +69,7 @@
   position: relative;
   /* 뷰포트너비의 100분의 x */
   width: 70vw;
-  height: 65vw;
+  height: 75vw;
   padding: 1em;
   border-radius: 1em;
   background: white;
