--- a/frontend/src/components/css/main/manager.css
+++ b/frontend/src/components/css/main/manager.css
@@ -69,7 +69,7 @@
   position: relative;
   /* 뷰포트너비의 100분의 x */
   width: 70vw;
-  height: 75vw;
+  /* height: 75vw; */
   padding: 1em;
   border-radius: 1em;
   background: white;
